--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,25 +24,22 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
 
 ---
 spring:
   profiles: Development
   datasource:
-    url: jdbc:h2:mem:demo;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: demo
-    password:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: password
     hikari:
       poolName: Hikari
       auto-commit: false
-    h2:
-      console:
-        enabled: false
     jpa:
       show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
