--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,19 @@ spring:
 
 spring:
   profiles: Production
-  jpa:
-    hibernate:
-      ddl-auto: none
+  datasource:
+    url: jdbc:mysql://localhost:3306/springbootdb
+    username: root
+    password: password
+    hikari:
+      poolName: Hikari
+      auto-commit: false
+    jpa:
+      show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+        format_sql: true
     show-sql: true
 
 ---
