--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -5,10 +5,10 @@ services:
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=Development
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://demo-postgresql:5432/postgres
+      - SPRING_DATASOURCE_URL=jdbc:mysql://demo-mysql:3306/springbootdb
     ports:
       - 8080:8080
-  demo-postgresql:
+  demo-mysql:
     extends:
-      file: postgresql.yml
-      service: demo-postgresql
+      file: mysql.yml
+      service: demo-mysql
